Created a main object for handling the options after parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,25 +1,26 @@
-# add_library(pck
-#   pck/
-#   )
+add_library(pck
+  PackTool.h PackTool.cpp
+  Include.h Define.h
+  )
 
-# target_link_libraries(pck PUBLIC)
+target_link_libraries(pck PUBLIC)
 
-# set_target_properties(pck PROPERTIES
-#   CXX_STANDARD 17
-#   CXX_EXTENSIONS OFF
-#   )
+set_target_properties(pck PROPERTIES
+  CXX_STANDARD 17
+  CXX_EXTENSIONS OFF
+  )
 
 
 add_executable(godotpcktool main.cpp)
 
-# target_link_libraries(godotpcktool PRIVATE pck)
+target_link_libraries(godotpcktool PRIVATE pck)
 
 # Static standard lib
-target_link_libraries(godotpcktool -static-libgcc -static-libstdc++)
+target_link_libraries(godotpcktool PRIVATE -static-libgcc -static-libstdc++)
 
 # Fully static executable
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-  target_link_libraries(godotpcktool -static)
+  target_link_libraries(godotpcktool PRIVATE -static)
 endif()
 
 set_target_properties(godotpcktool PROPERTIES LINK_FLAGS_RELEASE -s)
