--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(pck
+  pck/GodotCompatibility.h
+  pck/file_access_pack.h pck/file_access_pack.cpp
   PackTool.h PackTool.cpp
   Include.h Define.h
   )
