Removed the godot code, as it was actually easier to just write my own
version following the order to unpack things in

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_library(pck
-  pck/GodotCompatibility.h
-  pck/file_access_pack.h pck/file_access_pack.cpp
-  PackTool.h PackTool.cpp
+  pck/PckFile.h pck/PckFile.cpp
+  PckTool.h PckTool.cpp
   Include.h Define.h
   )
 
