Added an option to filter files based on size

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(pck
   pck/PckFile.h pck/PckFile.cpp
   PckTool.h PckTool.cpp
+  FileFilter.h FileFilter.cpp
   Include.h Define.h
   )
 
