Build Windows binaries using MinGW on GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,32 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: godotpcktool-linux-glibc2.31
+          name: godotpcktool-linux-x86_64-glibc2.31
           path: build/src/godotpcktool
+
+  windows:
+    runs-on: ubuntu-20.04
+    name: Windows (MinGW, Release)
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -qqq build-essential cmake ninja-build gcc-mingw-w64 g++-mingw-w64
+
+      - name: Build and install using CMake
+        env:
+          CMAKE_GENERATOR: Ninja
+        run: |
+          cmake -B build -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=cmake/mingw-w64-x86_64.cmake
+          cmake --build build
+          sudo cmake --build build --target install
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: godotpcktool-windows-x86_64
+          path: build/src/godotpcktool.exe
